<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.VerifyCodeActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.054719564" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="146dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verfication"
        android:textColor="@color/blueDark"
        android:textSize="25sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enter_sms"
        android:textColor="@color/blueDark"
        android:textSize="15sp"

        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/verify_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/back_raduis"
        android:fontFamily="@font/raleway"
        android:text="@string/verfy"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.mukesh.OtpView


        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="72dp"
        android:inputType="number"
        android:itemBackground="@color/white"
        android:textColor="@color/colorPrimary"
        app:itemCount="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"

        app:lineColor="@color/colorPrimary"
        app:viewType="line"
        android:textSize="23sp"
        app:itemHeight="60dp"
        app:lineWidth="3.5dp"
        />

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/et1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white"
            android:inputType="phone"
            android:maxLength="1"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/et2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white"
            android:inputType="phone"
            android:maxLength="1"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/et3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white"
            android:inputType="phone"
            android:maxLength="1"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/et4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white"
            android:inputType="phone"
            android:maxLength="1"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/et5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white"
            android:inputType="phone"
            android:maxLength="1"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/et6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white"
            android:inputType="phone"
            android:maxLength="1"
            android:textAlignment="center" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>